--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="gameViewer.js" type="text/javascript"></script>
+    <script src="/hash.js" type="text/javascript"></script>
     <link rel="stylesheet" href="gameViewerStyles.css">
 </head>
 <body>
@@ -19,12 +20,8 @@
         </div>
         <div class="row mb-2" id="links">
             <div class="col">
-                <a href="rules">
-                    <button class="btn btn-primary">Rules</button>
-                </a>
-                <a href="docs">
-                    <button class="btn btn-primary">API Docs</button>
-                </a>
+                <a href="rules"><button class="btn btn-primary">Rules</button></a>
+                <a href="docs"><button class="btn btn-primary">API Docs</button></a>
             </div>
         </div>
         <div class="row mb-2" id="gameView">
@@ -39,7 +36,7 @@
         </div>
     </div>
 
-    <script>
+    <script type="module">
         function setView() {
             const val = parseInt(document.getElementById("gameViewIdInput").value);
             clearTimeout(curViewTimeout);
