Refactor game viewer

--- a/static/docs.html
+++ b/static/docs.html
@@ -50,7 +50,7 @@
                                     <li><code>pos</code>: The position of the player, in the form [x, y]. Positions are 0-indexed.</li>
                                     <li><code>invented</code>: The list of this player's invented jumps, an array of vectors in the form [x, y].</li>
                                     <li><code>points</code>: Number of points</li>
-                                    <li><code>idHash</code>: Hash of the player's id</li>
+                                    <li><code>idHash</code>: Hash of the player's id. This can be used to uniquely identify a player.</li>
                                 </ul>
                             </li>
                             <li><code>myPlayer</code>: Only included if <code>playerId</code> is specified. 
