--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <title>Jump Game</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="gameViewer.js" type="text/javascript"></script>
     <script src="/hash.js" type="text/javascript"></script>
     <link rel="stylesheet" href="gameViewerStyles.css">
@@ -24,24 +25,41 @@
                 <a href="docs"><button class="btn btn-primary">API Docs</button></a>
             </div>
         </div>
-        <div class="row mb-2" id="gameView">
+        <div class="row mb-2">
             <div class="col">
-                <div class="mb-2" id="gameViewForm">
-                    <label for="gameViewIdInput">View game with id:</label>
-                    <input type="text" id="gameViewIdInput">
-                    <input type="button" class="btn btn-primary" onclick="setView()" value="View">
+                <ul class="nav nav-tabs mb-2" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="gameViewButton" data-bs-toggle="tab" data-bs-target="#gameView" type="button" role="tab" aria-controls="game-view" aria-selected="true">View game</button>
+                    </li>
+                    <li class="nav-item">
+                        <button class="nav-link" id="playViewButton" data-bs-toggle="tab" data-bs-target="#playView" type="button" role="tab" aria-controls="game-view" aria-selected="false">Play game</button>
+                    </li>
+                </ul>
+
+                <div class="tab-content" id="viewSelect">
+                    <div class="tab-pane fade show active" id="gameView" role="tabpanel" aria-labelledby="gameViewButton">
+                        <div class="mb-2" id="gameViewForm">
+                            <label for="gameViewIdInput">View game with id:</label>
+                            <input type="text" id="gameViewIdInput">
+                            <input type="button" class="btn btn-primary" onclick="setView()" value="View">
+                        </div>
+                        <div id="gameViewArea"></div>
+                    </div>
+                    <div class="tab-pane fade" id="playView" role="tabpanel" aria-labelledby="playViewButton">
+                        <p>hi</p>
+                    </div>
                 </div>
-                <div id="gameViewArea"></div>
+
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
+        let gameViewer;
         function setView() {
             const val = parseInt(document.getElementById("gameViewIdInput").value);
-            clearTimeout(curViewTimeout);
-            refreshGame(val, document.getElementById("gameViewArea"));
+            if (gameViewer) gameViewer.destructor();
+            gameViewer = new GameViewer(val, document.getElementById("gameViewArea"));
         }
     </script>
 </body>
