--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@
                                 <label for="playMoveYInput">Distance left:</label>
                                 <input type="number" id="playMoveYInput">
                             </div>
-                            <input type="button" class="btn btn-primary" onclick="sendMove()" value="Send move">
+                            <input id="playSendMoveButton" type="button" class="btn btn-primary" onclick="sendMove()" value="Send move">
                         </div>
                         <div id="gamePlayArea"></div>
                     </div>
@@ -95,6 +95,16 @@
                 document.getElementById("playJoinButton").classList.add("d-none");
                 gamePlayer.onStart = () => {
                     document.getElementById("playMoveForm").classList.remove("d-none");
+                }
+                gamePlayer.onMoveEnable = () => {
+                    document.getElementById("playSendMoveButton").removeAttribute("disabled");
+                    document.getElementById("playSendMoveButton").value = "Send move";
+                }
+                gamePlayer.onMoveDisable = (gameData) => {
+                    document.getElementById("playSendMoveButton").setAttribute("disabled", "true");
+                    const turnsWait = gameData.myPlayer.nextMoveTurn-1-gameData.turnNum;
+                    const turnsPlural = turnsWait !== 1 ? "s" : "";
+                    document.getElementById("playSendMoveButton").value = `Wait ${turnsWait} turn${turnsPlural} to send`;
                 }
             } catch (err) {
                 alert("Error joining game: "+err);
