Add game finishing

--- a/static/docs.html
+++ b/static/docs.html
@@ -67,6 +67,7 @@
                                     </li>
                                 </ul>
                             </li>
+                            <li><code>winnerHashes</code>: A list of hashes of the winners. Only exists if gameState="finished"</li>
                         </ul>
                     </div>
                 </div>
