--- a/static/docs.html
+++ b/static/docs.html
@@ -18,7 +18,7 @@
         <div class="row mt-2 mb-2" id="header">
             <div class="col">
                 <h1>Jump Game Docs</h1>
-                <a href="/"><button class="btn btn-primary">Go back</button></a>
+                <a href="../"><button class="btn btn-primary">Go back</button></a>
             </div>
         </div>
         <div class="row">
