--- a/static/index.html
+++ b/static/index.html
@@ -21,8 +21,8 @@
         </div>
         <div class="row mb-2" id="links">
             <div class="col">
-                <a href="rules"><button class="btn btn-primary">Rules</button></a>
-                <a href="docs"><button class="btn btn-primary">API Docs</button></a>
+                <a href="rules/"><button class="btn btn-primary">Rules</button></a>
+                <a href="docs/"><button class="btn btn-primary">API Docs</button></a>
             </div>
         </div>
         <div class="row mb-2">
